client/src/assets/css/App.css
:root {
    
}
body {
    font-family: Roboto;
    background-color: #F9F7DC;
}

.App {
    height: 100vh;
}

/*
 * LANDING COMPONENT CSS
 */

.landing {
    height: 100%;
}

.landingActionZone {
    text-align: center;
}

.registerCard {
    color: #5EBD78;
}

.loginCard {
    color: #15878F;
}

/*
 * END
 */

/*
 * REGISTER COMPONENT CSS
 */

.registerGrid {
    min-height: 100%;
}

.registerContainer {
    padding-top: 10px;
    padding-bottom: 10px;
}

.registerContainer > h1 {
    text-align: center;
}

.registerForm {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.registerInput {
    width: 60%;
}

.registerSubmitBtn {
    margin-top: 10px !important;
}

